--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ramy1415/nodeJs-Project#readme",
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "connect-flash-plus": "^0.2.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
