--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.0",
     "jquery": "^3.4.1",
     "mongoose": "^5.9.1",
+    "mongoose-auto-increment-reference": "^5.0.11",
     "multer": "^1.4.2",
     "nodemon": "^2.0.2",
     "socket.io": "^2.3.0"
